Fix NewGame interface menu spacing issues

--- a/styles/NewGame.module.scss
+++ b/styles/NewGame.module.scss
@@ -25,8 +25,8 @@ $lcarsMenuWidthMobile: 80px;
 
 	margin-top: $lcarsMenuGap;
 	width: 220px;
-	height: 60px;
-	padding: 30px 5px 0 0;
+	height: 70px;
+	padding: 40px 5px 0 0;
 	font-size: 1.6em;
 	text-align: right;
 	user-select: none;
